@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gettext-0.14.1-lib-path-tests.patch 707 RMD160 4ec25fa507f8f58a361991237f1b32ad52caff92 SHA1 e70dcbe2a964530ae27bfdc56e995538b8d5e5ad SHA256 c9681e9dc9f04ffb041e5fa6dac886d529231ddb1b73688157d69c3277b96097
 MD5 3077319e6090fcd6262e2d8fd463441f files/gettext-0.14.1-lib-path-tests.patch 707
 RMD160 4ec25fa507f8f58a361991237f1b32ad52caff92 files/gettext-0.14.1-lib-path-tests.patch 707
@@ -16,14 +19,14 @@ EBUILD gettext-0.16.1-r1.ebuild 3223 RMD160 195f67381b0b0ecfa82dd167b7f595983466
 MD5 e11cf7cb33bae82c26a8932cdb838151 gettext-0.16.1-r1.ebuild 3223
 RMD160 195f67381b0b0ecfa82dd167b7f5959834661804 gettext-0.16.1-r1.ebuild 3223
 SHA256 86f6086696d72b8e0d2774383f93647275e45c2af96d018336fa598c82931de8 gettext-0.16.1-r1.ebuild 3223
-EBUILD gettext-0.17.ebuild 3219 RMD160 bd2063f484f3d413a044c80c4059aa219002edf9 SHA1 c2310d5b42156a61fbb88e8e034e484994b668a8 SHA256 90dce1e1f9609f12802cd31bec15b1f808bd58a229ec1c4fc443cb1c512ff746
-MD5 6e041c11648e45c540b8a9794aaa3832 gettext-0.17.ebuild 3219
-RMD160 bd2063f484f3d413a044c80c4059aa219002edf9 gettext-0.17.ebuild 3219
-SHA256 90dce1e1f9609f12802cd31bec15b1f808bd58a229ec1c4fc443cb1c512ff746 gettext-0.17.ebuild 3219
-MISC ChangeLog 20207 RMD160 3edf676a889858b8cd993d3e5b38191f05b16747 SHA1 3980ab04a597ab64dc39d0fe858ab01f20e1dd54 SHA256 9333c06f40726b9b1fe9da3565ab323e8a36d4a443dfdcbb4d297070a89c248a
-MD5 de200b0eafadf32ee28a7c794efc3be6 ChangeLog 20207
-RMD160 3edf676a889858b8cd993d3e5b38191f05b16747 ChangeLog 20207
-SHA256 9333c06f40726b9b1fe9da3565ab323e8a36d4a443dfdcbb4d297070a89c248a ChangeLog 20207
+EBUILD gettext-0.17.ebuild 3054 RMD160 86aac4f6e784ca8d6ebbc763c8c9218ccdfc1cbf SHA1 bfe5999392383bc045cbc92113bb1a74925759ad SHA256 c18f00986d5ff3dd70cffa70f14e25ec06b295bfd77636c7e928ca411487f0cc
+MD5 2a2d812a206c9bf11df22ff2c5345d50 gettext-0.17.ebuild 3054
+RMD160 86aac4f6e784ca8d6ebbc763c8c9218ccdfc1cbf gettext-0.17.ebuild 3054
+SHA256 c18f00986d5ff3dd70cffa70f14e25ec06b295bfd77636c7e928ca411487f0cc gettext-0.17.ebuild 3054
+MISC ChangeLog 20411 RMD160 8c1c3c57ddca2ea7232d62e746a0bcf1431c0c83 SHA1 2b89ceae51bc33fb7d5ba2fe0b42ded7aa2addea SHA256 04edcae7e4e1c64156919281b69fb084f75c27a12ae5d019b3f1d197cbdaaa8b
+MD5 910fc3b8286380133f19e13dc745510d ChangeLog 20411
+RMD160 8c1c3c57ddca2ea7232d62e746a0bcf1431c0c83 ChangeLog 20411
+SHA256 04edcae7e4e1c64156919281b69fb084f75c27a12ae5d019b3f1d197cbdaaa8b ChangeLog 20411
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -34,3 +37,10 @@ SHA256 fcec1f6a5ae0b5b6204ed6bb505566eec066b83ba20aab9a94740353912a4d1c files/di
 MD5 508542369ed9ee45fde8cb75b7cba403 files/digest-gettext-0.17 244
 RMD160 7357797c1c8433639221bedab8f0fb1773c6711d files/digest-gettext-0.17 244
 SHA256 295f80a4341e2336ec4916e2a283e5e9df51c86d6331cdf49ba3a724ebc6adff files/digest-gettext-0.17 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkeBte8ACgkQj9hvisErhMKeEACgxUxCuM+cFBIlBI31LaB0Q8HR
+9PAAn0vppAu9vZ9KzHBPPZiUmYQJNNgz
+=1+qn
+-----END PGP SIGNATURE-----
