@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gettext
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.161 2007/12/17 01:24:14 jer Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.162 2008/01/07 05:17:29 vapier Exp $
+
+  07 Jan 2008; Mike Frysinger <vapier@gentoo.org> gettext-0.17.ebuild:
+  Pull in ncurses/libcroco/libxml2 which we actually use, force glib to
+  bundled version, and add support for USE="acl openmp".
 
   17 Dec 2007; Jeroen Roovers <jer@gentoo.org> gettext-0.17.ebuild:
   Stable for HPPA (bug #202168).
